--- a/css/carousel.css
+++ b/css/carousel.css
@@ -10,7 +10,7 @@ button{
 }
 
 .imgBox{
-    background: url("/blob/master/images/1.jpg") no-repeat;
+    background: url("images/1.jpg") no-repeat;
     height: 100%;
     background-size: 100%;
 }
